Se modifica el diseño del componente <header> tanto en index.html como en style.css

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     <header id="header">
-        <img src="assets/images/Wotlk_Logo.webp" alt="Logo de la expansión Wrath of the Lich King">
+        <h1><span class="left"> &lt; </span> danielgr <span class="right">&gt;</span></h1>
 
         <ul>
             <li><a target="_blank" href="https://github.com/danielgr19">Github Link</a></li>
+            <div class="colm"></div>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-grajales-rivera-724bb621b/">LinkedIn Link</a></li>
+            <div class="colm"></div>
             <li><a target="_blank" href="https://discordapp.com/users/933044382964265010">Discord Link</a></li>
         </ul>
     </header>
+
+    <hr class="sec">
+
+    
 
 </body>
 </html>
