Se diseñan y se agregan los keyframes para los contenedores que llevarán la información

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WOTLK: Healers</title>
+    <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,6 +20,21 @@
     </header>
 
     <hr class="sec">
+
+    <div class="info">
+        <div class="expProf">
+            <h2>Experiencia profesional</h2>
+        </div>
+
+        <div class="compClave">
+            <h2>Competencias clave</h2>
+        </div>
+        <div class="formAcad">
+            <h2>Formación académica</h2>
+        </div>
+    </div>
+
+
 
     
 
