Se añade la información restante relacionada al CV. Queda pendiente rediseño para incluir un menú deslizable para ver todo la información solo en un apartado.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="header">
-        <h1><span class="left"> &lt; </span> danielgr <span class="right">&gt;</span></h1>
+        <h1><span class="left"> &lt; </span> Daniel Grajales <span class="right">&gt;</span></h1>
 
         <ul>
             <li><a target="_blank" href="https://github.com/danielgr19">Github Link</a></li>
@@ -21,22 +21,128 @@
 
     <hr class="sec">
 
-    <div class="info">
-        <div class="expProf">
-            <h2>Experiencia profesional</h2>
+        <div id="info">
+
+            <div>
+                <h1>Perfil profesional</h1>
+                <p>Ingeniero de sistemas con más de dos años de experiencia en desarrollo full-stack y un enfoque practico en
+                    ingeniería de software. He colaborado en numerosos equipos ágiles desarrollando aplicaciones web
+                    escalables basadas en tecnologías como Node.js, Angular, PostgreSQL, además de optimizar procesos y
+                    mejorar la experiencia de usuario a través de soluciones modernas. </p>
+
+                <p>Reconocido por mi capacidad analítica, gestión autónoma y enfoque en objetivos, me destaco en entornos
+                    de alta exigencia donde la entrega de soluciones de calidad es clave.
+                    </p>
+            </div>
+
+            <hr class="sec">
+
+            <div class="expProf">
+                <h1>Experiencia profesional</h1>
+                <h2>Desarrollador Freelance</h2>
+
+                <ul>
+                    <li>Desarrollo e implementación de una arquitectura con Spring Boot, React y PostgreSQL, habilitando
+                        la gestión de proyectos de manera digital.</li>
+                    <li>Desarrollé e implementé una aplicación basada en Python para el seguimiento de servicios
+                        relacionado al mantenimiento de computadoras, reduciendo perdida de aproximadamente 150 USD
+                        debido a la mejora de la gestión de garantías.</li>
+                    <li>Implementé prácticas de integración y entrega continua (CI/CD) para mejorar la eficiencia en la
+                        entrega de software, disminuyendo errores y tiempos de entrega reduciendo los tiempos de
+                        despliegue en más de un 80%.</li>
+                    <li>Diseño e implementación de bases de datos escalables usando PostgreSQL, optimizando consultas
+                        mediante índices y normalización, mejorando la eficiencia de consultas en un 25%.</li>
+                    <li>Coordiné tareas con metodologías ágiles utilizando Jira, asegurando entregas puntuales y alineadas
+                        con las expectativas del cliente.</li>
+                    <li>Proporcioné soporte post desarrollo, resolviendo tendencias y realizando actualizaciones de manera
+                        proactiva para garantizar la estabilidad de las aplicaciones.</li>
+                </ul>
+
+                <h2>Bancolombia | Aprendiz universitario</h2>
+
+                <ul>
+                    <li>Implementación de transformaciones y automatizaciones de procesos mediante el uso de Django
+                        Rest Framework, Angular y Python. </li>
+                    <li>Diseño y estructuración de prototipos en todas las etapas del ciclo de vida del desarrollo de software,
+                        asegurando entregar alineadas con la necesidad del negocio.</li>
+                    <li>Desarrollé e implementé dos proyectos clave: uno para el cálculo de estado de resultados y otro para
+                        automatizar la realización de un tablero de control, optimizando procesos clave y mejorando la
+                        supervisión operativa, logrando una mayor eficiencia y decisiones más informadas.</li>
+                    <li>Rediseño de una interfaz de usuario en Angular, mejorando la experiencia de usuario.</li>
+                    <li>Propuse y desarrollé un sistema para documentar incidencias conocidas, logrando completar el 80%
+                        del proyecto con el objetivo de que los miembros de la gerencia gestionaran soluciones de manera
+                        más eficiente y mejoraran sus procesos.</li>
+                </ul>
+            </div>
+
+            <hr class="sec">
+
+            <div class="compClave">
+                <h1>Competencias clave</h1>
+
+                <table>
+                    <tr>
+                        <td>React</td>
+                        <td>Node.js</td>
+                        <td>Linux</td>
+                        <td>AWS</td>
+                        <td>Resiliencia</td>
+                    </tr>
+                    <tr>
+                        <td>Spring Boot</td>
+                        <td>DevOps</td>
+                        <td>Docker</td>
+                        <td>Python</td>
+                        <td>Trabajo en equipo</td>
+                    </tr>
+                    <tr>
+                        <td>Tailwind CSS</td>
+                        <td>PostgreSQL</td>
+                        <td>JavaScript</td>
+                        <td>Angular</td>
+                        <td>Resolucion de problemas</td>
+                    </tr>
+                    <tr>
+                        <td>Machine Learning</td>
+                        <td>Git / Github</td>
+                        <td>metodologías ágiles</td>
+                        <td>Versátil</td>
+                        <td>Excelentes habilidades organizativas</td>
+                    </tr>
+                </table>
+
+            </div>
+
+            <hr class="sec">
+
+            <div class="formAcad">
+                <h1>Formación académica</h1>
+
+                <div id="univ">
+                    <div>
+                        <h2>INSTITUCIÓN UNIVERSITARIA DE ENVIGADO</h2>
+                        <h3>Ingeniería de Sistemas</h3>
+                    </div>
+
+                    <div>
+                        <h2>Envigado, Antioquia</h2>
+                        <h3>Diciembre 2024</h3>
+                    </div>
+                </div>
+
+                <div id="cole">
+                    <div>
+                        <h2>INSTITUCIÓN EDUCATIVA DIEGO ECHAVARRÍA MISAS</h2>
+                        <h3>Bachiller técnico en programación de software</h3>
+                    </div>
+
+                    <div>
+                        <h2>Itagüí, Antioquia</h2>
+                        <h3>Diciembre 2017</h3>
+                    </div>
+                </div>
+
+            </div>
         </div>
-
-        <div class="compClave">
-            <h2>Competencias clave</h2>
-        </div>
-        <div class="formAcad">
-            <h2>Formación académica</h2>
-        </div>
-    </div>
-
-
-
-    
-
 </body>
 </html>
